# TFMUnir

./: .gitignore  README.md  cav1_v0.0.2.py  constants.py  requirements.txt
.github/: setup.cfg
backend/: pyproject.toml  requirements.txt
backend/devops/: build.sh  service.Dockerfile
backend/project/adapters/cli/v1/: __init__.py  train_models.py
backend/project/adapters/rest/v1/: __init__.py  run_models.py  test_models.py
backend/project/clients/: google.py
backend/project/services/: hamodel.py  testhamodel.py  vsmodel.py
backend/resources/boostraps/: corpus.py
backend/resources/models/model_stopwords.model/: README.md  config_sentence_transformers.json  tokenizer_config.json
backend/tests/metrics/: BookTest.xlsx  __init__.py  metrics.csv  metrics_infra.csv  metrics_vsmodel.csv  summary.txt
mobile/: settings.gradle.kts
mobile/TFMUnir/: build.gradle.kts
mobile/gradle/: libs.versions.toml
mobile/gradle/wrapper/: gradle-wrapper.properties
project/adapters/cli/v1/: __init__.py  (+2 more)
project/adapters/rest/: __init__.py
project/clients/: aws.py  yolo.py
project/services/: etl.py  explode.py  hamodel.py  hearingaidmodel.py  inputs.py  outputs.py  testhamodel.py  textToVoice.py  visualsupportmodel.py  vsmodel.py  yolo.py
project/services/credentials/: application_default_credentials.json
resources/: settings.txt
resources/boostraps/: corpus.py
resources/how2sign/: how2sign_realigned_test.csv
resources/models/model_stopwords.model/: config.json
services/: emotions.py  runner.py  speechRecognition.py  texToVoice.py  trainner.py  yolo.py
(+40 files in other folders)
